# TestFoodWebStore

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
pages/: auth_page.py  base_page.py  cart_page.py  catalog_page.py  checkout_page.py  complete_page.py  create_product_page.py  edit_products_page.py  navigation_bar_page.py  order_overview_page.py  update_product_page.py
tests/: conftest.py  test_auth.py  test_cart.py  test_catalog.py  test_checkout.py  test_complete.py  test_create_product.py  test_edit_products.py  test_navigation.py  test_order_overview.py  test_technical.py  test_update_product.py
tests/test_data/: auth_data.py  cart_data.py  checkout_data.py  datasets.py  expected_values.py  headers.py  login_data.py  new_product_data.py  pages_data.py  product_data.py  test_products.py  user_data.py
utils/: assertion.py  conditions.py  http_methods.py
webstore_config/: config.py  end_points.py  links.py  locators.py  webstore_api.py
